--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -6,9 +6,9 @@ div#wall #tag-2 {
   display: none;
 }
 
-#wall #tag-3.slick-wicked {
-  display: none;
-}
+/*#wall #tag-3.slick-wicked {*/
+/*  display: none;*/
+/*}*/
 
 /*#wall .parent #tag-4 {*/
 /*  display: none;*/
