--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,9 +10,9 @@ div#wall div#tag-3.slick {
   display: none;
 }
 
-/*#wall .parent #tag-4 {*/
-/*  display: none;*/
-/*}*/
+#wall .parent #tag-4 {
+  display: none;
+}
 
 /*#wall .parent #tag-5.slick {*/
 /*  display: none;*/
