--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,9 +14,9 @@ div#wall div#tag-3.slick {
   display: none;
 }
 
-/*#wall .parent #tag-5.slick {*/
-/*  display: none;*/
-/*}*/
+#wall .parent #tag-5.slick {
+  display: none;
+}
 
 /*#wall .parent div #tag-6 {*/
 /*  display: none;*/
