--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,9 +14,11 @@ div#wall div#tag-3.slick {
   display: none;
 }
 
-#wall .parent #tag-5.slick {
+div#wall .parent div#tag-5.slick {
   display: none;
 }
+
+div#wall .parent #tag-5.slick
 
 /*#wall .parent div #tag-6 {*/
 /*  display: none;*/
