--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,11 +18,9 @@ div#wall .parent div#tag-5.slick {
   display: none;
 }
 
-div#wall .parent #tag-5.slick
-
-/*#wall .parent div #tag-6 {*/
-/*  display: none;*/
-/*}*/
+#wall .parent div #tag-6 {
+  display: none;
+}
 
 /*#wall .parent div #tag-7.slick {*/
 /*  display: none;*/
