--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,10 +18,11 @@ div#wall .parent div#tag-5.slick {
   display: none;
 }
 
-#wall .parent div #tag-6 {
+div#wall div.parent div div#tag-6 {
   display: none;
 }
 
+div#wall div.parent div:last-child
 /*#wall .parent div #tag-7.slick {*/
 /*  display: none;*/
 /*}*/
