--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,6 +22,8 @@ div#wall div.parent div div#tag-6 {
   display: none;
 }
 
-/*#wall .parent div #tag-7.slick {*/
-/*  display: none;*/
-/*}*/
+#wall .parent div #tag-7.slick {
+  display: none;
+}
+
+body div#wall div.parent div > #tag-
