--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,7 +22,7 @@ div#wall div.parent div div#tag-6 {
   display: none;
 }
 
-#wall .parent div #tag-7.slick {
+div#wall div.parent div div#tag-7.slick {
   display: none;
 }
 
